Flehed out some of the projects pages, added routes in-between

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,3 +10,13 @@
 .active {
     color: brown;
 }
+
+.debug {
+    border: 5px solid black;
+}
+
+.card-list {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+}
