Started Card flip animation

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .skele-card {
-    cursor: default;
+    display: flex;
+    margin-bottom: 10px;
+    text-align: left;
+    z-index: 1;
+    background-color: black;
+    cursor: pointer;    
+    transition: transform 200ms;
 }
 
 .skele-detail {
@@ -153,9 +159,26 @@ div.skele-desc div:last-child {
 
 
 /* Glow */
-.glow {
+/* .glow {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2.5rem;
     background-color: var(--accent-color);
-}
+    transform: translateY(2.5rem);
+    animation: glow-pulse 10s infinite alternate;
+} */
+
+/* @keyframes glow-pulse {
+    0% {
+        box-shadow: 0 0 4rem 2rem var(--accent-color);
+    }
+
+    100% {
+        box-shadow: 0 0 4rem 4rem var(--accent-color);
+    }
+} */
 
 /* Particles */
 
@@ -280,8 +303,6 @@ main.centered {
 .landing {
     font-size: 3rem;
     margin-right: 0.9rem;
-    /* -webkit-text-fill-color: white;
-    -webkit-text-stroke: 5px black; */
 }
 
 .title {
@@ -327,10 +348,19 @@ main.centered {
     margin-right: 1.5rem;
 }
 
-.profile-pic {
-    width: 380px;
-    height: 380px;
-    border-radius: 100%;
+.profile-card {
+    border: 5px solid red;
+    aspect-ratio: 3/4;
+    width: 20rem;
+}
+
+.profile-card img {
+    width: 100%;
+    
+}
+
+.summary {
+    border: 5px solid red;
 }
 /* ---------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------- */
@@ -341,8 +371,38 @@ main.centered {
 .filter-bar {
     display: flex;
     justify-content: left;
+    align-items: center;
+    /* text-align: left; */
     margin-left: 0.5rem;
     margin-bottom: 1rem;
+}
+
+#filter {
+    background-color: var(--text-color);
+    border: none;
+    border: 1px solid var(--text-color);
+    border-radius: 0.5rem 0 0 0.5rem;
+    padding: 0.1rem 0;
+}
+
+.direction-toggle {
+    background-color: var(--text-color);
+    border: none;
+    border: 1px solid var(--text-color);
+    border-radius: 0 0.5rem 0.5rem 0rem;
+    box-sizing: border-box;
+    padding: 0.1rem 1rem;
+}
+
+.direction-toggle:hover {
+    --text-color: hsl(0, 17%, 92%);
+    background-color: var(--text-color);
+    border: 1px solid var(--text-color);
+}
+
+.direction-toggle.descending {
+    background-color: var(--accent-color);
+    border: 1px solid var(--accent-color);
 }
 
 .card-list {
@@ -408,29 +468,32 @@ main.centered {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 1.5rem;
     background-color: white;
     z-index: 9999;
 }
 
 .modal-close {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 0.5rem;
+    top: 0.5rem;
+    /* border: none;
+    background-color: transparent; */
+    /* add background image here */
 }
 
 .demo-video {
+    aspect-ratio: 16 / 9;
     width: 60vw;
-    height: auto;
     justify-self: center;
 }
 
 .no-video {
-    /* 789.8w x 402h */
     display: inline-block;
     align-self: center;
+    aspect-ratio: 16 / 9;
     width: 60vw;
-    /* width: 920px; */
-    height: 400px;
+    /* height: 400px; */
     border: 1px solid black;
 }
 
@@ -482,3 +545,18 @@ main.centered {
 }
 /* ---------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------- */
+
+/* Prefers animation off */
+@media (prefers-reduced-motion: reduce) {
+    *, 
+    ::before, 
+    ::after {
+        animation-delay: -1ms !important;
+        animation-duration: 1ms !important;
+        animation-iteration-count: 1 !important;
+        background-attachment: initial !important;
+        scroll-behavior: auto !important;
+        transition-duration: 0s !important;
+        transition-delay: 0s !important;
+      }
+}
